# Aletheia

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aletheia/api/: dependencies.py  main.py  router.py  schemas.py
aletheia/api/routes/: health.py  recommend.py
aletheia/data/: interactions.py  load_data.py
aletheia/evaluation/: ranking.py
aletheia/models/: ncf.py
aletheia/training/: dataset.py  train.py  train_config.py
aletheia/utils/: sampling.py
checkpoints/: ncf.pt
scripts/: evaluate_ranking.py  model_smoke_test.py  smoke_test.py  train_ncf.py
web/aletheia-frontend/: Dockerfile  package-lock.json
web/aletheia-frontend/app/: globals.css  layout.tsx  page.tsx
web/aletheia-frontend/app/api/recommend/: route.ts
web/aletheia-frontend/components/: film-reel-loader.tsx  movie-recommendations.tsx  movie-selector.tsx
